--- a/css/main.css
+++ b/css/main.css
@@ -68,7 +68,7 @@ body {
 
 .sombra {
     box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
-    background-color: var(--blanco);
+    background-color:aqua;
     padding: 2rem;
     border-radius: 1rem;
 }
@@ -119,7 +119,7 @@ h3 {
 
 /* Navegacion Principal */
 .nav-bg {
-    background-color: white;
+    background-image: url(../img/TocadorBDNCSF.jpg);
 }
 
 .panel_navegacion {
@@ -137,7 +137,7 @@ h3 {
 .panel_navegacion a {
     display: block;
     text-align: center;
-    color: black;
+    color:white;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 700;
@@ -202,7 +202,7 @@ h3 {
 }
 
 .mueble h3 {
-    color: aqua;
+    color:chocolate;
     font-weight: normal;
 }
 
@@ -214,14 +214,42 @@ h3 {
 .mueble .iconos {
     height: 15rem;
     width: 15rem;
-    background-color:var(--gris);
+    background-color:calc();
     border-radius: 50%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     
 }
+.tabla{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.tabla td{
+    margin: 0.5rem;
+    padding: auto;
+}
+.vistaRapida section{
+    display: flex;
+    width: 100%;
+    height: 430px;
+}
 
+.vistaRapida section img {
+    width: 0px;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: 8;
+    transition: .3s ease;
+}
+
+.vistaRapida section img:hover {
+    cursor: pointer;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(70%);
+}
 /** Contacto **/
 .formulario {
     background-color: yellow;
