--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,7 @@ body {
     background-color:aqua;
     padding: 2rem;
     border-radius: 1rem;
+    opacity:0.7;
 }
 
 /* Tipografia */
@@ -137,7 +138,7 @@ h3 {
 .panel_navegacion a {
     display: block;
     text-align: center;
-    color:white;
+    color:turquoise;
     text-decoration: none;
     font-size: 2rem;
     font-weight: 700;
