--- a/css/main.css
+++ b/css/main.css
@@ -71,7 +71,7 @@ body {
     background-color:aqua;
     padding: 2rem;
     border-radius: 1rem;
-    opacity:0.7;
+    opacity:0.9;
 }
 
 /* Tipografia */
@@ -271,7 +271,7 @@ h3 {
     text-transform: uppercase;
     font-weight: 700;
     margin-bottom: 2rem;
-    color: var(--secundario);
+    color: black;
 }
 
 @media (min-width: 768px) {
@@ -293,7 +293,7 @@ h3 {
 }
 
 .campo label {
-    color: var(--blanco);
+    color: var(--oscuro);
     font-weight: bold;
     margin-bottom: .5rem;
     display: block;
