--- a/css/mainIndex.css
+++ b/css/mainIndex.css
@@ -32,8 +32,9 @@ html {
 body {
     font-size: 16px;
     /* 1rem = 10px */
-    font-family: 'Krub', sans-serif;
-    background-image:url(../img/Fondo.webp);
+    font-family: 'Krub', sans-serif;/*
+    background-image:url(../img/Fondo.webp);*/
+    background-color:rgb(194, 255, 255) ;
 }
 
 .contenedor {
@@ -68,7 +69,7 @@ body {
 
 .sombra {
     box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
-    background-color:aqua;
+    background-color:rgb(0, 255, 255);
     padding: 2rem;
     border-radius: 1rem;
     opacity:0.9;
@@ -253,7 +254,7 @@ h3 {
 }
 /** Contacto **/
 .formulario {
-    background-color: yellow;
+    background-color:00CCCC;
     width: min(60rem, 100%);
     /** Utilizar el valor más pequeño **/
     margin: 0 auto;
@@ -321,4 +322,11 @@ h3 {
 
 .zoom:hover {
     transform: scale(1.9);
+}
+.botonMenu{
+    width: 30rem;
+    height: 30rem;
+    background-color: #00CCCC;
+    border-radius: 50%;
+
 }
