--- a/css/mainIndex.css
+++ b/css/mainIndex.css
@@ -32,9 +32,9 @@ html {
 body {
     font-size: 16px;
     /* 1rem = 10px */
-    font-family: 'Krub', sans-serif;/*
-    background-image:url(../img/Fondo.webp);*/
-    background-color:rgb(194, 255, 255) ;
+    font-family: 'Krub', sans-serif;
+    background-image:url(../img/Fondo.webp);/*
+    background-color:rgb(194, 255, 255) ;*/
 }
 
 .contenedor {
