--- a/css/mainIndex.css
+++ b/css/mainIndex.css
@@ -324,11 +324,11 @@ h3 {
     transform: scale(1.9);
 }
 .botonMenu{
-    width: 30rem;
-    height: 30rem;
+    width: 40rem;
+    height: 40rem;
     background-color: #00CCCC;
     border-radius: 50%;
-
+    margin: 10px;
 }
 .sinEstilo{
     text-decoration: none;
